<resources>
<string name="flurrykey">JF344JF2J5N6QSQ727RR</string>
    <string name="app_id">671598942899133</string>
	<string name="description">Media Controls</string>
    <string name="app_name">vLearn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="learningtogether">Learning Together</string>
    <string name="aprendiendo_juntos">Aprendiendo Juntos</string>
    <string name="poweredby">Powered by</string>
    <string name="start">START</string>
    <string name="login_with">Login with my \nPlazaFamilia Account</string>
    <string name="loign_text">Login</string>
    <string name="forgetPassword">forgot password ?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_time_here">First time here?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="Create_New_Account">Create New Account</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="DOB">DOB</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Grade">Grade</string>
    <string name="Role">Role</string>
    <string name="Gender">Gender</string>
    <string name="ZIP_Code">ZIP Code</string>
    <string name="E_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="trending">Trending</string>
    <string name="animduration_short">200</string>
    <string name="animduration_medium">350</string>
    <string name="animduration_long">500</string>
    <string name="back">&#60;  Back</string>
    <string name="gradeString">grad</string>
    <string name="your_feedback">YOUR FEEDBACK</string>
    <string name="rating">Rating</string>
    <string name="ratingdetail">Rate 1 to 5 <small>(1 is bad- 5 is excellent)</small></string>
    <string name="submit">Submit</string>
    <string name="please_wait">Please wait…</string>
    <string name="serverError">Server Error</string>
    <string name="vlearningebook">vLearning Bank</string>
    <string name="mycommunity">My Community</string>
    <string name="settings">Settings</string>
    <string name="short_bio">Short Bio</string>
    <string name="Are_you_representing_your_organization">Are you representing your organization?</string>
    <string name="why_are_you_interested_in_becoming_a_learning_padrino">Why are you interested in becoming a Learning Padrino/Madrina?</string>
    <string name="how_did_you_here_about_me">How did you hear about us?</string>
    <string name="schooName">School Name</string>
    <string name="schoolLevel">School Level</string>
    <string name="schoolZipCode">School\'s Zip Code</string>
    <string name="Mobile_No">Mobile No.</string>
    <string name="Error">Error</string>
    <string name="Logging_in">Logging in</string>
    <string name="Registering">Registering</string>
    <string name="Success">Success!</string>
    <string name="Sorry">Sorry</string>
    <string name="Updating_profile">Updating profile</string>
    <string name="There_was_an_error_connecting_to_the_server">There was an error connecting to the server</string>
    <string name="Try_again">Try again!</string>
    <string name="Both_fields_are_required">Both fields are required</string>
    <string name="All_fields_are_required">All fields are required</string>
    <string name="Sharing">Sharing</string>
    <string name="Language_English">Language</string>
    <string name="Language">Language</string>
    <string name="Select_Language">Select Language</string>
    <string name="My_Games">My vLearns</string>
    <string name="Me">Me</string>
    <string name="Assign">Assign</string>
    <string name="Learning_Together">Learning Together</string>
    <string name="Virtua_Dollars">Virtual Dollars</string>
    <string name="maria_learning_history">Maria\'s Learning history</string>
    <string name="My_account">My account</string>
    <string name="Learning_history">Learning history</string>
    <string name="Saving_video...">Saving video…</string>
    <string name="Start">Start</string>
    <string name="Continue">Continue</string>
    <string name="Cancel">Cancel</string>
    <string name="Camera">Camera</string>
    <string name="Saved_photos">Saved photos</string>
    <string name="Ok">OK</string>
    <string name="Update">Update</string>
    <string name="Register">Register</string>
    <string name="Back_to_registration">Back to registration</string>
    <string name="Please_input_you_email_address.">Please input your email address.</string>
    <string name="Select">Select</string>
    <string name="Save">Save</string>
    <string name="Login">Login</string>
    <string name="Create_an_Account">Create an Account</string>
    <string name="Logout">Logout</string>
    <string name="Save_Question_Answers">Save Question &#38; Answers</string>
    <string name="Search">Search</string>
    <string name="My_Account">My Account</string>
    <string name="Game_Mode">Game Mode</string>
    <string name="My_Profile">My Profile</string>
    <string name="Add_New_Game">&#43; Add New vLearn</string>
    <string name="_Back">&#60; Back</string>
    <string name="Edit">Edit</string>
    <string name="approve">Approve</string>
    <string name="Uploading_Video_file">Uploading Video file</string>
    <string name="_Add_New">&#43; Add New</string>
    <string name="Please_select_Parent_and_Teacher_And_try_again">Please select Parent and Teacher&#44; And try again</string>
    <string name="There_is_no_video_in_this_category_Be_the_first_one_to_reate_a_Learn_Just_lick_on_the_top_right_and_unleas_ou__">There is no video in this category. Be the first one to create a vLearn. Just click on the top right and unleash your creativity. In the meantime, do you want to search the other videos?</string>
    <string name="New_Question">New Question</string>
    <string name="Could_not_retrieve_list_of_careers">Could not retrieve list of careers</string>
    <string name="Could_not_retrieve_list_of_roles">Could not retrieve list of roles</string>
    <string name="Could_not_retrieve_list_of_grades_and_categories">Could not retrieve list of grades and categories</string>
    <string name="A_community_of_parents_and_educators_committed_to_turning_ou__">A community of parents and educators committed to turning our Kid\'s learning into a fun &#38; magical experience&#33;</string>
    <string name="Please_enter_lock_code">Please enter lock code</string>
    <string name="To_Play_Mode">To Play Mode</string>
    <string name="Go">Go</string>
    <string name="You_entered_an_incorrect_unlcok_code">You entered an incorrect unlcok code</string>
    <string name="Login_ith_y_lazaFamilia_Account">Login with my PlazaFamilia Account</string>
    <string name="First_time_here_">First time here?</string>
    <string name="Forget_Password">Forget Password</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Select_gender">Select gender</string>
    <string name="Select_date">Select date</string>
    <string name="Select_Role">Select Role</string>
    <string name="Select_Grade">Select Grade</string>
    <string name="three_easy_steps_to_get_started">3 easy steps to get started</string>
    <string name="Set_ock_Code">Set Lock Code</string>
    <string name="Set_ock_code">Set lock code</string>
    <string name="Lock_Code">Lock Code</string>
    <string name="Update_Lock_Code">Update Lock Code</string>
    <string name="Remov_lock_code">Remove lock code</string>
    <string name="Writ_thi_number_in_a_safe_plac_as_the_lock_code_can_nly_be_removed_y_uninstalling_the_application_if__lost">Write this number in a safe place as the lock code can only be removed by uninstalling the application if lost</string>
    <string name="My_Sets">My Sets</string>
    <string name="My_profile">My profile</string>
    <string name="_Set">1 Set</string>
    <string name="_Games">%d Games</string>
    <string name="Profile_updated">Profile updated!</string>
    <string name="Edit_Account_Details">Edit Account Details</string>
    <string name="Uploading_set">Uploading set</string>
    <string name="Category_name">Category name</string>
    <string name="Could_not_update_set_information">Could not update set information</string>
    <string name="Select_source">Select source</string>
    <string name="New_Game">New vLearn</string>
    <string name="Language__English">(Language: English)</string>
    <string name="SetName">Set Name</string>
    <string name="Description">Description</string>
    <string name="Saveand_Add_Questions">Save and Add Questions</string>
    <string name="Assignees">Assignees</string>
    <string name="Select_Subject">Select Subject</string>
    <string name="Set_name">Set name</string>
    <string name="No_correct_answer_selected">No correct answer selected</string>
    <string name="please_indicate_why_are_you_flagging">Please indicate why are you flagging this item:</string>
    <string name="inappropiate_content">Inappropriate Content</string>
    <string name="incorrect_answer">Incorrect Answer</string>
    <string name="poor_quality_graphics">Poor quality graphics</string>
    <string name="poor_quality_sound">Poor quality sound</string>
    <string name="Could_not_update_question">Could not update question</string>
    <string name="Could_not_save_question">Could not save question </string>
    <string name="Please_select_at_least_one_correct_answer">Please select at least one correct answer</string>
    <string name="Please_enter_answer_text">Please enter answer text</string>
    <string name="Questions">Questions</string>
    <string name="Question_title">Question title</string>
    <string name="Answers">Answers</string>
    <string name="Answer">Answer</string>
    <string name="_Add_Answer">&#40; Add Answer</string>
    <string name="set_on_for_right_answer">(set on for right answer)</string>
    <string name="I_just_shared_A_fun_activity_for_graders_Familia_1">I just shared - </string>
    <string name="I_just_shared_A_fun_activity_for_graders_Familia_2">A fun </string>
    <string name="I_just_shared_A_fun_activity_for_graders_Familia_3">activity for </string>
    <string name="I_just_shared_A_fun_activity_for_graders_Familia_4">graders #Familia</string>
    <string name="Setup_Error">Setup Error</string>
    <string name="Missing_app_ID_You_cannot_run_the_app_until_you_provide_this_in_the_code_">Missing app ID. You cannot run the app until you provide this in the code.</string>
    <string name="Invalid_or_missing_URL_scheme_You_cannot_run_the_app_until_you_set_up_a_valid_URL_scheme_in_your_plist_">Invalid or missing URL scheme. You cannot run the app until you set up a valid URL scheme in your .plist.</string>
    <string name="Uploading_Set_image">Uploading Set image</string>
    <string name="Could_not_share_Set_please__try_again">Could not share Set, please try again</string>
    <string name="Uploading_audio_1">Uploading</string>
    <string name="Uploading_audio_2">audio</string>
    <string name="Uploading_image_1">Uploading</string>
    <string name="Uploading_image_2">image</string>
    <string name="Tweet_cancelled.">Tweet cancelled.</string>
    <string name="Tweet_done.">Tweet done.</string>
    <string name="Twitter_has_not_been_enabled_for_this_application_please_do_so_in_general_settings">Twitter has not been enabled for this application, please do so in general settings</string>
	<string name="whowillapprovethisproject">Who will approve this project?</string>
	<string name="projecttype">Prject Type</string>
	<string name="aFamilymember">A Family Member (This is a Family project)</string>
	<string name="aTeacher">A Teacher (This is a Class project)</string>
	<string name="SubmitForApproval">Sumbit for Approval</string>
</resources>