<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vlearn="http://schemas.android.com/apk/res/com.vlearn.android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingLeft="@dimen/margintop_20"
    android:paddingRight="@dimen/margintop_20" >

    <com.vlearn.android.ui.CustomEditTextTTF
        android:id="@+id/forgetPassword"
        style="@style/editTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/E_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_color_blue"
        android:textStyle="bold"
        vlearn:customttfEditText="fonts/KRONIKA_.ttf" />

    <com.vlearn.android.ui.CustomButtonTTF
        android:id="@+id/okButton"
        style="@style/button_login_page"
        android:layout_width="@dimen/margintop_102"
        android:layout_alignBaseline="@+id/cancelButton"
        android:layout_marginRight="@dimen/margintop_05"
        android:layout_toLeftOf="@+id/cancelButton"
        android:text="@string/Ok"
        android:textSize="@dimen/textSizeNormal"
        vlearn:custombuttonttf="fonts/Cookies.ttf" />

    <com.vlearn.android.ui.CustomButtonTTF
        android:id="@+id/cancelButton"
        style="@style/button_login_page"
        android:layout_width="@dimen/margintop_102"
        android:layout_alignRight="@+id/forgetPassword"
        android:layout_below="@+id/forgetPassword"
        android:layout_marginRight="@dimen/margintop_05"
        android:layout_marginTop="@dimen/margintop_10"
        android:text="@string/Cancel"
        android:textSize="@dimen/textSizeNormal"
        vlearn:custombuttonttf="fonts/Cookies.ttf" />

</RelativeLayout>