<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:vlearn="http://schemas.android.com/apk/res/com.vlearn.android"
    android:id="@+id/container"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.vlearn.android.MainActivity" >

        <com.vlearn.android.ui.CustomTextViewTTF
            android:id="@+id/textViewTTF1"
            style="@style/textViewLarge"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margintop_40"
            android:text="@string/learningtogether"
            android:textAlignment="center"
            vlearn:customttf="fonts/KRONIKA_.ttf" />

        <com.vlearn.android.ui.CustomTextViewTTF
            style="@style/textViewLarge"
            android:layout_alignLeft="@+id/textViewTTF1"
            android:layout_below="@+id/textViewTTF1"
            android:layout_marginTop="@dimen/cloud_1_top"
            android:text="@string/aprendiendo_juntos"
            android:textColor="@color/yellow_color_text"
            vlearn:customttf="fonts/KRONIKA_.ttf" />

        <com.vlearn.android.ui.CustomTextViewTTF
            android:id="@+id/poweredby"
            style="@style/textViewMedium"
            android:layout_above="@+id/spinner"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="-20dp"
            android:layout_toLeftOf="@+id/spinner"
            android:text="@string/poweredby"
            android:textColor="@color/text_color_blue"
            vlearn:customttf="fonts/KRONIKA_.ttf" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/spinnerVlearn"
            android:layout_above="@+id/startButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margintop_30"
            android:spinnerMode="dropdown" />

        <com.vlearn.android.ui.CustomButtonTTF
            android:id="@+id/startButton"
            style="@style/button_login_page"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margintop_40"
            android:background="@drawable/button_selector_rect_star"
            android:onClick="startButtonClick"
            android:text="@string/start"
            android:textSize="@dimen/textSizeLarge"
            vlearn:custombuttonttf="fonts/Cookies.ttf" />
    </RelativeLayout>

</FrameLayout>